--- a/src/components/Volume/Volume.css
+++ b/src/components/Volume/Volume.css
@@ -20,6 +20,7 @@
     box-sizing: border-box;
     box-shadow: 0px 0px 4px 4px rgba(6, 8, 9, 0.3);
     padding: 15px 0;
+    z-index: 20;
 }
 
 .volume-slider-inner {
